kubernetes/apps/selfhosted/paperless/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: paperless-redis
            app.kubernetes.io/instance: paperless-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: smtp-relay
            app.kubernetes.io/instance: smtp-relay
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
